RESOLVED FIXED61369
GraphicsContextSkia::drawConvexPolygon doesn't pay attention to shouldAntialias
https://bugs.webkit.org/show_bug.cgi?id=61369
Summary GraphicsContextSkia::drawConvexPolygon doesn't pay attention to shouldAntialias
Tom Hudson
Reported 2011-05-24 09:45:35 PDT
GraphicsContextSkia::drawConvexPolygon() ignores the shouldAntialias. The CG & Qt implementations both do obey it. The effect is that Skia/Chromium does *too much* antialiasing, particularly on the vertical edges of table cells where WebKit is telling us not to antialias.
Attachments
Patch (93.76 KB, patch)
2011-05-24 14:17 PDT, Tom Hudson
no flags
Patch (577 bytes, patch)
2011-05-25 05:59 PDT, Tom Hudson
no flags
Patch (93.84 KB, patch)
2011-05-25 06:20 PDT, Tom Hudson
jamesr: review+
jamesr: commit-queue-
Tom Hudson
Comment 1 2011-05-24 14:17:02 PDT
Tom Hudson
Comment 2 2011-05-25 05:59:11 PDT
Tom Hudson
Comment 3 2011-05-25 06:20:59 PDT
James Robinson
Comment 4 2011-05-25 12:23:57 PDT
Comment on attachment 94776 [details] Patch Patch looks good. Not touching c-q flag yet, lemme scheme with Dimitri about how to land this.
James Robinson
Comment 5 2011-05-25 12:26:36 PDT
Comment on attachment 94776 [details] Patch cq-, we're gonna have to land this manually
Eric Seidel (no email)
Comment 6 2011-06-18 20:02:18 PDT
Any update? This was marked for manual landing nearly a month ago.
Tom Hudson
Comment 7 2011-06-20 05:38:20 PDT
(In reply to comment #6) > Any update? This was marked for manual landing nearly a month ago. At that time the gardener held off landing it because they didn't want to disable so many tests. I assume that I need a committer to work with, and don't have one in my local office.
James Robinson
Comment 8 2011-06-20 12:55:06 PDT
Hi, sorry. This patch is good to land but will require a good amount of manual work by committers post-landing to deal with unexpected image failures and to rebaseline the expected image diffs. I was hoping (as it turns out optimistically) that I'd have some time to help get this landed, but that's seeming unrealistic. Anyone who feels comfortable handling the pixel test rebaselines should feel free to land this at any time (but please coordinate with the chromium WebKit gardener).
James Robinson
Comment 9 2011-07-10 20:18:28 PDT
Landed http://trac.webkit.org/changeset/90701, rebaselining has begun.
Ben Wells
Comment 11 2011-07-27 21:52:44 PDT
*** Bug 60342 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.