Patch by Tom Hudson <tomhudson@google.com> on 2011-07-10 Reviewed by James Robinson.

GraphicsContextSkia::drawConvexPolygon doesn't pay attention to shouldAntialias
https://bugs.webkit.org/show_bug.cgi?id=61369

Source/WebCore:

* platform/graphics/skia/GraphicsContextSkia.cpp:
(WebCore::GraphicsContext::drawConvexPolygon): Pass the
shouldAntialias parameter on to Skia.

LayoutTests:

* platform/chromium/test_expectations.txt: Temporarily add roughly
1100 images that were incorrectly being antialiased; will remove
once they've been rebaselined off of the bots.

git-svn-id: svn://svn.chromium.org/blink/trunk@90701 bbb929c8-8fbe-4397-9dbb-9b2b20218538