third_party/WebKit/Source/WebCore/platform/graphics/skia/GraphicsContextSkia.cpp
@@ -485,6 +485,7 @@ void GraphicsContext::drawConvexPolygon(size_t numPoints,
 
     SkPaint paint;
     platformContext()->setupPaintForFilling(&paint);
+    paint.setAntiAlias(shouldAntialias);
     platformContext()->canvas()->drawPath(path, paint);
 
     if (strokeStyle() != NoStroke) {
